# paperclip-harness

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TOOLS.md  Taskfile.yml  deny.toml
.cargo/: config.toml
.claude/skills/angel-brand/: SKILL.md
.claude/skills/svg-create/: SKILL.md
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: agent.rs  main.rs  ui.rs
crates/cli/src/assets/: anvil.txt
crates/cli/src/commands/: auth.rs  config.rs  eval.rs  memory.rs  mod.rs  paperclip.rs  run.rs
crates/cli/tests/: echo_integration.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: auth.rs  config.rs  error.rs  lib.rs  message.rs  provider.rs  session.rs
crates/core/src/providers/: claude.rs  claude_code.rs  mod.rs
crates/evolution/: Cargo.toml
crates/evolution/src/: defaults.rs  engine.rs  lib.rs  tests.rs  traits.rs  types.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  event.rs  lib.rs  server.rs
crates/memory/: AGENTS.md  Cargo.toml
crates/memory/migrations/: 0001_init.sql
crates/memory/src/: db.rs  episode.rs  evolution.rs  lib.rs
crates/paperclip/: Cargo.toml
crates/paperclip/src/: client.rs  heartbeat.rs  lib.rs  types.rs
crates/tools/: AGENTS.md  Cargo.toml
crates/tools/src/: builtin.rs  lib.rs  registry.rs  schema.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  events.rs  gateway.rs  ui.rs
scripts/: setup-hooks.sh
