[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anvil"
path = "src/main.rs"

[features]
evolution = ["dep:harness-evolution"]

[dependencies]
harness-core = { workspace = true }
harness-tools = { workspace = true }
harness-memory = { workspace = true }
harness-evolution = { path = "../evolution", optional = true }
tokio = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
indicatif = "0.17"
console = "0.15"

[dev-dependencies]
tokio-test = "0.4"
