[package]
name = "harness-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Interactive ratatui TUI for monitoring a running Anvil agent via harness-gateway"

[[bin]]
name = "anvil-tui"
path = "src/main.rs"

[dependencies]
# Workspace
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# TUI
ratatui = "0.28"
crossterm = { version = "0.27", features = ["event-stream"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
